Changes in version 12.11, 11/12/2025
====================================

* calculator.hpp: Update to version 2.0 with improved error handling.
  This version detects most integer overflows and underflows.
* test/calculator.cpp: Add much more tests for calculator.hpp.
* PreSieve.cpp: Simplify SIMD runtime dispatching.
* CmdOptions.cpp: Prevent multiple different --print options.
* CMakeLists.txt: Increase CMake min version to 3.9.
* BUILD.md: Update MSVC build instructions.

Changes in version 12.10, 03/11/2025
====================================

* src/MemoryPool.cpp: Fix undefined behavior in Bucket allocation.
* build_mingw64_arm64.sh: Enable ARM SVE for Mingw-w64 on ARM64.
* test/CMakeLists.txt: Improve Windows libprimesieve.dll support.
* examples/c/CMakeLists.txt: Improve Windows libprimesieve.dll support.
* examples/cpp/CMakeLists.txt: Improve Windows libprimesieve.dll support.
* ci.yml: Add WebAssembly/Emscripten test.
* BUILD.md: Add WebAssembly/Emscripten build instructions.

Changes in version 12.9, 14/05/2025
===================================

* CMakeLists.txt: Speed up build by removing compile dependencies.
* Move private header files from /include to /src.
* src/CMakeLists.txt: Update for private header files in /src.
* test/CMakeLists.txt: Update for private header files in /src.
* Vector.hpp: Get rid of std::is_trivial which is deprecated in C++26.

Changes in version 12.8, 12/04/2025
===================================

* Vectorize primesieve::iterator.prev_prime() using AVX512.
* api.cpp: Tune sieve array size.
* PreSieve.cpp: Simplify SIMD code.
* PreSieve_default.hpp: New algorithm that is also fast using -Os and -O2.
* PreSieve_arm_neon.hpp: New file, contains ARM NEON algorithm.
* PreSieve_arm_sve.hpp: New file, contains ARM SVE algorithm.
* PreSieve_x86_avx512.hpp: New file, contains AVX512 algorithm.
* PreSieve_x86_sse2.hpp: New file, contains SSE2 algorithm.
* ci/benchmark.yaml: Add CI test to detect performance regressions.